apps/base/lemmy/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lemmy
  namespace: lemmy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lemmy
  template:
    metadata:
      labels:
        app: lemmy
    spec:
      containers:
        - name: lemmy
          image: dessalines/lemmy:0.17.4
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 8536
          volumeMounts:
            - mountPath: /config/config.hjson
              subPath: config.hjson
              name: lemmy-secrets
        - name: lemmy-ui
          image: dessalines/lemmy-ui:0.17.4
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 1234
        - name: proxy
          image: nginx:1.25.0-alpine
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 30m
              memory: 32Mi
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
              name: proxy-config
              readOnly: true
      volumes:
        - name: lemmy-secrets
          secret:
            secretName: lemmy-secrets
        - name: proxy-config
          configMap:
            name: proxy-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pictrs
  namespace: lemmy
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pictrs
  template:
    metadata:
      labels:
        app: pictrs
    spec:
      securityContext:
        runAsUser: 991
        runAsGroup: 991
        fsGroup: 991
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: pictrs
          image: asonix/pictrs:0.4.0-rc.3
          resources:
            limits:
              memory: 128Mi
            requests:
              cpu: 50m
              memory: 64Mi
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - mountPath: /mnt/sled-repo
              subPath: sled
              name: pictrs-data
            - mountPath: /mnt/files
              subPath: files
              name: pictrs-data
      volumes:
        - name: pictrs-data
          persistentVolumeClaim:
            claimName: pictrs-data
