apps/base/lemmy/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: lemmy
  namespace: lemmy
spec:
  selector:
    app: lemmy
  ports:
    - name: proxy
      port: 80
      targetPort: 80
      protocol: TCP
  sessionAffinity: ClientIP
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 3600
---
apiVersion: v1
kind: Service
metadata:
  name: pictrs
  namespace: lemmy
spec:
  selector:
    app: pictrs
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: wefwef
  namespace: lemmy
spec:
  selector:
    app: wefwef
  ports:
    - name: http
      port: 80
      targetPort: 5314
      protocol: TCP
